--- a/mignon-battle.html
+++ b/mignon-battle.html
@@ -13,10 +13,9 @@
 body {
   font-family: 'Press Start 2P';
   font-size: 16px;
+  background-color: 4FFF33;
 }    
-body {
-background-color: green;
-}
+
 </style>
     
 </body>
