--- a/mignon-battle.html
+++ b/mignon-battle.html
@@ -14,8 +14,11 @@
 body {
   font-family: 'Press Start 2P';
   font-size: 16px;
-  background-color: 4FFF33;
-}    
+}
+    
+body {
+    background-color: 99e111;
+}
     
 img {
    width: 100%;    
