--- a/mignon-battle.html
+++ b/mignon-battle.html
@@ -2,7 +2,7 @@
 
 <html>
 <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
-
+<embed src="https://mysteriousparadox.github.io/oddishCDN/battle_with_an_undead_foe.wav" autostart="true" loop="true" hidden="true">
 <body>
 <img src = "https://mysteriousparadox.github.io/oddishCDN/philly-mignon-battle.png">
 <br>
@@ -34,4 +34,3 @@ img {
     
 </body>
     
-</html>
