--- a/philly-mignon-battle-1.html
+++ b/philly-mignon-battle-1.html
@@ -18,6 +18,10 @@
 <script src="https://pikapark201.github.io/pikcadn/fullscreen-button.js"></script>
 
 <body>
+<img src = "https://mysteriousparadox.github.io/oddishCDN/philly-mignon-battle-1.jpg"></img>
+  
+<br>
+  
 <h1>You leave the house. Outside, you encounter Philly Mignon, level 5. He challenges you to a fight. What do you do?</h1>
 
 <br>
