--- a/philly-mignon-battle-1.html
+++ b/philly-mignon-battle-1.html
@@ -18,7 +18,7 @@
 <script src="https://pikapark201.github.io/pikcadn/fullscreen-button.js"></script>
 
 <body>
-<img class="two" img src="https://pikapark201.github.io/oddishCDN/mignon-battle-1.jpg" id="battle">
+<img class="two" img src="https://mysteriousparadox.github.io/oddishCDN/mignon-battle-1.jpg" id="battle">
   
 <br>
   
