--- a/philly-mignon-battle-1.html
+++ b/philly-mignon-battle-1.html
@@ -16,14 +16,10 @@
 <script src="https://pikapark201.github.io/pikacdn/vid0.js"></script>
 <script src="https://pikapark201.github.io/pikacdn/video.js"></script>
 <script src="https://pikapark201.github.io/pikcadn/fullscreen-button.js"></script>
-
 <body>
-<img class="two" img src="https://mysteriousparadox.github.io/oddishCDN/mignon-battle-1.jpg" id="battle">
-  
-<br>
-  
-<h1>You leave the house. Outside, you encounter Philly Mignon, level 5. He challenges you to a fight. What do you do?</h1>
-
+<img class="two" img src="https://mysteriousparadox.github.io/oddishCDN/mignon-battle-1.jpg" id="battle"> 
+<br> 
+<h1>You leave the house and run into Philly Mignon, strength 5. You have a strength of 10. What do you do?</h1>
 <br>
 
 <div class="center1">
@@ -31,7 +27,7 @@
 <div class="center3">
 <div class="center4">
 <div class-"center5">
-<a href="https://mysteriousparadox.github.io/oddishCDN/battle-coming-soon.html">Fight!</a>
+<a href="https://pikapark201.github.io/pikacdn/404.html">Fight!</a>
 </div>
 </div>
 </div>
