--- a/gameover.html
+++ b/gameover.html
@@ -18,7 +18,7 @@
 <script src="https://pikapark201.github.io/pikcadn/fullscreen-button.js"></script>
 <embed src="https://pikapark201.github.io/pikacdn/gameover.wav" autostart="true" loop="true" hidden="true"> 
 <body>
-<img class="two" img src="https://pikapark201.github.io/pikacdn/inside2.jpg" id="home">
+<img class="two" img src="https://mysteriousparadox.github.io/oddishCDN/killyou1.jpg" id="home">
 <br>
 <br>
 <br>
