--- a/philly-mignon-battle-1.html
+++ b/philly-mignon-battle-1.html
@@ -39,7 +39,7 @@
 <div class="center3">
 <div class="center4">
 <div class-"center5">
-<a href="https://pikapark201.github.io/pikacdn/404.html">Run!</a>
+<a href="https://mysteriousparadox.github.io/oddishCDN/gameover.html">Run!</a>
 </div>
 </div>
 </div>
